--- a/PraktikPortalen/Views/Shared/_Layout.cshtml
+++ b/PraktikPortalen/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="Internships" asp-action="Internships">Praktikforløb</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Profile" asp-action="Profile">Profil</a>
                             </li>
                         </ul>
                     </div>
@@ -32,9 +32,9 @@
         </main>
     </div>
     <center>
-        <footer class="border-top footer" style="max-width: 75%;">
+        <footer class="border-top footer" style="max-width: 100%;">
             <div class="container">
-                &copy; 2022 - PraktikPortalen - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                &copy; 2022 - PraktikPortalen
             </div>
         </footer>
     </center>
