--- a/PraktikPortalen/Views/Shared/_Layout.cshtml
+++ b/PraktikPortalen/Views/Shared/_Layout.cshtml
@@ -8,39 +8,42 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PraktikPortalen.styles.css" asp-append-version="true" />
 </head>
-<body>
-    <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3" style="background-color: red;">
-                <div class="container-fluid">
-                    <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: xx-large;">Praktik Portalen</a>
-                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Internships" asp-action="Internships">Praktikforløb</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Profile" asp-action="Profile">Profil</a>
-                            </li>
-                        </ul>
+    <body>
+    @if (PraktikPortalen.Controllers.HomeController.notAuthenticated == true)
+    {
+        <header>
+                <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3" style="background-color: red;">
+                    <div class="container-fluid">
+                        <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: xx-large;">Praktik Portalen</a>
+                        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Internships" asp-action="Internships">Praktikforløb</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Profile" asp-action="Profile">Profil</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
+                </nav>
+        </header>
+    }
+        <div class="container">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
+        <center>
+            <footer class="border-top footer" style="max-width: 75%;">
+                <div class="container">
+                    &copy; 2022 - PraktikPortalen
                 </div>
-            </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-    <center>
-        <footer class="border-top footer" style="max-width: 100%;">
-            <div class="container">
-                &copy; 2022 - PraktikPortalen
-            </div>
-        </footer>
-    </center>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
-</body>
+            </footer>
+        </center>
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        @await RenderSectionAsync("Scripts", required: false)
+    </body>
 </html>
