--- a/PraktikPortalen/Views/Shared/_Layout.cshtml
+++ b/PraktikPortalen/Views/Shared/_Layout.cshtml
@@ -31,8 +31,9 @@
                 @RenderBody()
             </main>
         </div>
+
         <center>
-            <footer class="border-top footer" style="max-width: 75%;">
+            <footer class="border-top footer">
                 <div class="container">
                     &copy; 2022 - PraktikPortalen
                 </div>
