--- a/PraktikPortalen/Views/Internships/Internships.cshtml
+++ b/PraktikPortalen/Views/Internships/Internships.cshtml
@@ -1,5 +1,34 @@
-﻿@model InternshipsModel
+﻿@model List<PraktikPortalen.Models.InternshipsModel>;
 @{
     ViewData["Title"] = "Praktikforløb";
 }
-<h1>Liste af praktikforløb</h1>
+<h1>Dine praktikforløb</h1>
+<table style="width: 100%">
+    <thead class="thead-light"></thead
+        <tr>
+            <th scope="col"> Navn
+            </th>
+            <th scope="col" style="padding-left: 600px">
+                Status
+            </th>
+        </tr>
+    @if (@Model != null)
+        {
+            <tbody>
+            @foreach (var data in Model)
+            {
+                <tr style="border-block: solid; line-height: 30px">
+                    <td>@data.InternshipName</td>
+                    @if (data.Status == "Approved") {
+                    <td style="padding-left: 600px; color: green">@data.Status</td>
+                } else if (data.Status == "Not approved") { 
+                    <td style="padding-left: 600px; color: red">@data.Status</td>
+                } else {
+                    <td style="padding-left: 600px">@data.Status</td>
+                }
+                        <td style="float:right"> <input type="button" value="Redigér"/> </td>
+                </tr>
+            }
+            </tbody>
+        }
+</table>
