--- a/PraktikPortalen/Views/Shared/_Layout.cshtml.css
+++ b/PraktikPortalen/Views/Shared/_Layout.cshtml.css
@@ -39,10 +39,15 @@ button.accept-policy {
   line-height: inherit;
 }
 
+.container {
+    min-height: 100%;
+    position: relative;
+}
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    height: 60px;
 }
