--- a/PraktikPortalen/Views/Shared/_Layout.cshtml
+++ b/PraktikPortalen/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
 ﻿<!DOCTYPE html>
+@inject IHttpContextAccessor context;
+
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -10,22 +12,26 @@
 </head>
     <body>
         <header>
-                <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3" style="background-color: red;">
-                    <div class="container-fluid">
-                        <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: xx-large;">Praktik Portalen</a>
-                        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                            <ul class="navbar-nav flex-grow-1">
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Internships" asp-action="Internships">Praktikforløb</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Profile" asp-action="Profile">Profil</a>
-                                </li>
-                            </ul>
-                        </div>
+        @if (context.HttpContext.Session.GetString("Token") != null)
+        {
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3" style="background-color: red;">
+                <div class="container-fluid">
+                    <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: xx-large;">Praktik Portalen</a>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Internships" asp-action="Internships">Praktikforløb</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Profile" asp-action="Profile">Profil</a>
+                            </li>
+                        </ul>
                     </div>
-                </nav>
-        </header>
+                    <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Login" style="font-size: x-large;">Log ud</a>
+                </div>
+            </nav>
+        }
+    </header>
         <div class="container">
             <main role="main" class="pb-3">
                 @RenderBody()
